--- a/manage_shift.html
+++ b/manage_shift.html
@@ -753,27 +753,27 @@
                 <ul class="list-group" style="padding-left: 9%; padding-right: 9%;">
                     <!-- Append text html -->
                     <li id='item-1' class='list-group-item text-center rounded'>
-                        <div class="row">
-                            <div class="col-2 text-center">
-                                <div class="input-group-prepend">
+                        <div class='row'>
+                            <div class='col-2 text-center'>
+                                <div class='input-group-prepend'>
                                     <span class='input-group-text' style='margin-right: 8px;'>1</span>
-                                    <input type="text" class="form-control text-center" value="ชื่อผู้บันทึก">
+                                    <input type='text' class='form-control text-center' value='ชื่อผู้บันทึก'>
                                 </div>
                             </div>
-                            <div class="col-2 text-center">
-                                <input type="text" class="form-control text-center" value="เวลา">
+                            <div class='col-2 text-center'>
+                                <input type='text' class='form-control text-center' value='เวลา'>
                             </div>
-                            <div class="col-2 text-center">
-                                <input type="text" class="form-control text-center" value="วันที่">
+                            <div class='col-2 text-center'>
+                                <input type='text' class='form-control text-center' value='วันที่'>
                             </div>
-                            <div class="col-2 text-center">
-                                <input type="text" class="form-control text-center" value="สาขา">
+                            <div class='col-2 text-center'>
+                                <input type='text' class='form-control text-center' value='สาขา'>
                             </div>
-                            <div class="col-3 text-center">
-                                <input type="text" class="form-control text-center" value="จำนวนเงิน">
+                            <div class='col-3 text-center'>
+                                <input type='text' class='form-control text-center' value='จำนวนเงิน'>
                             </div>
-                            <div class="col-1 text-center" style="margin-top: 3px;">
-                                <button id='btn-edit-1' class='btn btn-sm btn-info' style='margin-right: 5px;' onclick='open_edit("1")'  data-toggle="modal" data-target="#shiftModal">
+                            <div class='col-1 text-center' style='margin-top: 3px;'>
+                                <button id='btn-edit-1' class='btn btn-sm btn-info' style='margin-right: 5px;' onclick='open_edit('1')'  data-toggle='modal' data-target='#shiftModal'>
                                     <i id='i-edit-1' class='fa fa-info-circle'></i>
                                 </button>
                             </div>
