--- a/manage_shift.html
+++ b/manage_shift.html
@@ -773,7 +773,7 @@
                                 <input type='text' class='form-control text-center' value='จำนวนเงิน'>
                             </div>
                             <div class='col-1 text-center' style='margin-top: 3px;'>
-                                <button id='btn-edit-1' class='btn btn-sm btn-info' style='margin-right: 5px;' onclick='open_edit('1')'  data-toggle='modal' data-target='#shiftModal'>
+                                <button id='btn-edit-1' class='btn btn-sm btn-info' style='margin-right: 5px;' onclick='open_edit(1)'  data-toggle='modal' data-target='#shiftModal'>
                                     <i id='i-edit-1' class='fa fa-info-circle'></i>
                                 </button>
                             </div>
