--- a/cash_record.html
+++ b/cash_record.html
@@ -225,8 +225,9 @@
                             winprint.focus();
                             winprint.print();
                             winprint.close();
-                            window.location = "sale.html";
+                            location.reload(true);
                         }
+                        location.reload(true);
                     }
                 });
             }
