--- a/clone_cash_record.html
+++ b/clone_cash_record.html
@@ -35,7 +35,7 @@
     <link href="css/untitled.css" rel="stylesheet">
 
     <script>
-        var cash,transfer,debtor,sum,dis,total,before_dt;
+        var cash,transfer,debtor,sum,dis,total,before_dt,datetime;
         var check = true;
         $(document).ready(function () {
             if(!localStorage.user_id){
@@ -50,7 +50,14 @@
              if(localStorage.role == "user"){
                 $("#mb").remove();
                 $("#mp").remove();
-            }    
+            }   
+
+            var d = new Date($.now());
+            $('#date').text(d.getDate() + "/" + (d.getMonth() + 1) + "/" + d.getFullYear());
+            datetime = d.getFullYear() + "-" + (d.getMonth()+1) + "-" + d.getDate() + " " + d.getHours() + ":" + d.getMinutes() + ":" + d.getSeconds();            
+            $('#user').text(localStorage.name);
+            $('#say_hi').text("สวัสดี, คุณ " +localStorage.name);
+             
             $.ajax({
                 url:"http://150.95.26.163:8080/gitmew/php/get_branch.php",
                 method:"GET",
@@ -64,9 +71,10 @@
             }); 
            
             $.ajax({
-                url:"http://150.95.26.163:8080/gitmew/php/clone_get_cash.php",
+                url:"http://150.95.26.163:8080/gitmew/php/get_shift.php",
                 method:"POST",
-                data:{'b_id':"1"},
+                data:{'b_id':"1",
+                'date':datetime},
                 success:function(data)
                 {
                     var obj = jQuery.parseJSON(data);
@@ -78,7 +86,7 @@
                     }else{
                         $('#cash').text(parseFloat(obj[0].total_price).toFixed(2) + " บาท");
                         cash = parseFloat(obj[0].total_price).toFixed(2);
-                        before_dt = obj[0].udt;                          
+                        before_dt = obj[0][1];                          
                     }
                     if(obj[1] == "none"){
                         transfer = "0.00";                        
@@ -106,21 +114,17 @@
                         total = parseFloat(obj[5].total_price).toFixed(2);
                     }                  
                 }
-            });
-
-            var d = new Date($.now());
-            $('#date').text(d.getDate() + "/" + (d.getMonth() + 1) + "/" + d.getFullYear());
-            $('#user').text(localStorage.name);
-            $('#say_hi').text("สวัสดี, คุณ " +localStorage.name);
+            });            
         });
 
         function get_cash(){
             var b_id = $('#branch option:selected').val();
            // alert(b_id);
             $.ajax({
-                url:"http://150.95.26.163:8080/gitmew/php/clone_get_cash.php",
+                url:"http://150.95.26.163:8080/gitmew/php/get_shift.php",
                 method:"POST",
-                data:{'b_id':b_id},
+                data:{'b_id':b_id,
+                'date':datetime},
                 success:function(data)
                 {
                     var obj = jQuery.parseJSON(data);
@@ -132,7 +136,7 @@
                     }else{
                         $('#cash').text(parseFloat(obj[0].total_price).toFixed(2) + " บาท");
                         cash = parseFloat(obj[0].total_price).toFixed(2);
-                        before_dt = obj[0].udt; 
+                        before_dt = obj[0][1]; 
                         check = true;                                 
                     }
                     if(obj[1] == "none"){
@@ -165,10 +169,7 @@
         }
 
         function cash_rec(){
-            if(check){
-                var d = new Date($.now());
-                $('#date').text(d.getDate() + "/" + (d.getMonth() + 1) + "/" + d.getFullYear());
-                var datetime = d.getFullYear() + "-" + (d.getMonth()+1) + "-" + d.getDate() + " " + d.getHours() + ":" + d.getMinutes() + ":" + d.getSeconds();            
+            if(check){             
                 var b_id = $('#branch option:selected').val();               
                 /*$.ajax({
                     url:"http://150.95.26.163:8080/gitmew/php/add_cash.php",
@@ -225,9 +226,10 @@
                             winprint.focus();
                             winprint.print();
                             winprint.close();
-                            window.location = "sale.html";
-                       /* }
-                    }
+                            location.reload(true);
+                        //}
+                        location.reload(true);
+                    /*}
                 });*/
             }
         }
@@ -235,14 +237,7 @@
         function logout(){
             localStorage.user_id = "";
             window.location = "login.html";
-        }
-
-        /*var b_id = 1;
-        function setbranch(arg){
-            b_id = arg;
-            var b = $('#li-branch-'+arg).text()
-            $("#branch").text(b);
-        }*/
+        }       
     </script>
 
     <style>
